--- a/src/components/home/NewsLetter/NewsLetter.css
+++ b/src/components/home/NewsLetter/NewsLetter.css
@@ -1,11 +1,21 @@
 .newsDiv{
-     background-image: url('../../../resources/img/email.jpg');
-     background-repeat: no-repeat;
-     background-position: center;
-     background-origin: border-box;
-     background-color: transparent;
+
      color: rgb(238, 250, 248);
-     background-blend-mode:overlay;
+     position: relative;
      border-radius: 10px;
+     z-index:10;
+    
+}
+.bg-image{
+     position: absolute;
+     top: 0;
+     left: 0;
+     width: 100%;
+     height: 100%;
      z-index: -1;
+     opacity: 0.7;
+
+}
+.form-div{
+     z-index: 10;
 }
