--- a/src/components/home/PartsComponent/HomePart/HomePart.css
+++ b/src/components/home/PartsComponent/HomePart/HomePart.css
@@ -1,16 +1,15 @@
 
 .parts{
-    
-     border: 2px solid rgba(15, 237, 226, 0.939);
-     border-radius: 10px;
-     padding-top:15px;
+    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+     border: 2px solid rgba(89, 131, 228, 0.939);
+     /* padding-top:15px; */
      padding-left: 10px;
      padding-bottom:15px;
      
-     box-shadow: 2px 3px 5px 5px rgb(236, 229, 232);
+     /* box-shadow: 2px 3px 10px 15px rgb(236, 229, 232); */
  
      text-align:center;
-     background-color:#8ac1f5;
+     background-color:#e6efeef7;
      color:rgb(9, 9, 74);
      
  
